finalização da página de vagas

--- a/projeto/index.html
+++ b/projeto/index.html
@@ -22,29 +22,37 @@
 	<body>
 		<div id="page">
 			<header class="header menu_fixed sticky">
-				<div id="logo">
-					<a href="index.html" title="Sparker - Directory and listings template">
-					<img src="img/logo-white.png" width="145" height="54" alt="" class="logo_normal">
-					<img src="img/logo-white.png" width="145" height="54" alt="" class="logo_sticky">
-					</a>
-				</div>
-				<ul id="top_menu">
-					<li><a href="account.html" class="btn_add">EMPRESAS</a></li>
-				</ul>
-				<a href="#menu" class="btn_mobile">
-					<div class="hamburger hamburger--spin" id="hamburger">
-						<div class="hamburger-box">
-							<div class="hamburger-inner"></div>
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-3 col-12">
+							<div id="logo">
+								<a href="index.html" title="Sparker - Directory and listings template">
+								<img src="img/logo-white.png" width="145" height="54" alt="" class="logo_normal">
+								<img src="img/logo-white.png" width="145" height="54" alt="" class="logo_sticky">
+								</a>
+							</div>
+						</div>
+						<div class="col-lg-9 col-12" style="margin: auto;">
+							<ul id="top_menu">
+								<li><a href="account.html" class="btn_add">EMPRESAS</a></li>
+							</ul>
+							<a href="#menu" class="btn_mobile">
+								<div class="hamburger hamburger--spin" id="hamburger">
+									<div class="hamburger-box">
+										<div class="hamburger-inner"></div>
+									</div>
+								</div>
+							</a>
+							<nav id="menu" class="main-menu">
+								<ul>
+									<li><span><a href="index.html">Início</a></span></li>
+									<li><span><a href="jobs.html">Vagas</a></span></li>
+									<li><span><a href="#0">Contato</a></span></li>
+								</ul>
+							</nav>
 						</div>
 					</div>
-				</a>
-				<nav id="menu" class="main-menu">
-					<ul>
-						<li><span><a href="index.html">Início</a></span></li>
-						<li><span><a href="jobs.html">Vagas</a></span></li>
-						<li><span><a href="#0">Contato</a></span></li>
-					</ul>
-				</nav>
+				</div>
 			</header>
 			<main>
 				<section class="hero_single version_5">
