adaptações para hospedagem

--- a/job-list2.html
+++ b/job-list2.html
@@ -21,7 +21,7 @@
 
     <!-- BASE CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/style-jobs.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 	<link href="css/vendors.css" rel="stylesheet">
 
     <!-- YOUR CUSTOM CSS -->
