--- a/projeto/job-list.html
+++ b/projeto/job-list.html
@@ -93,9 +93,41 @@
 		<div class="results">
 		   <div class="container">
 			   <div class="row">
-				   <div class="col-lg-12 col-md-12 col-12 search-container">
+				   <div class="col-lg-4 col-md-5 col-10 search-container">
 				   		<h4>Nutricionista clinica e hospitalar</h4>
 						<h5>145 resultados para sua pesquisa.</h5>
+				   </div>
+				   <div class="col-lg-8 col-md-7 col-2 btn_search_mobile_auto">
+					   <a href="#0" class="side_panel btn_search_mobile"></a>
+						<div class="row no-gutters custom-search-input-2 inner">
+							<div class="col-lg-6">
+								<div class="form-group">
+									<input class="form-control" type="text" placeholder="What are you looking for...">
+									<i class="icon_search"></i>
+								</div>
+							</div>
+							<div class="col-lg-5">
+								<div class="form-group">
+									<input class="form-control" type="text" placeholder="Where">
+									<i class="icon_pin_alt"></i>
+								</div>
+							</div>
+							<!--
+							<div class="col-lg-3">
+								<select class="wide">
+									<option>All Categories</option>	
+									<option>Shops</option>
+									<option>Hotels</option>
+									<option>Restaurants</option>
+									<option>Bars</option>
+									<option>Events</option>
+									<option>Fitness</option>
+								</select>
+							</div>-->
+							<div class="col-lg-1">
+								<input type="submit" value="Buscar">
+							</div>
+						</div>
 				   </div>
 			   </div>
 		   </div>
