--- a/projeto/index.html
+++ b/projeto/index.html
@@ -14,10 +14,8 @@
 		<link rel="apple-touch-icon" type="image/x-icon" sizes="114x114" href="img/apple-touch-icon-114x114-precomposed.png">
 		<link rel="apple-touch-icon" type="image/x-icon" sizes="144x144" href="img/apple-touch-icon-144x144-precomposed.png">
 
-		<link href="css/bootstrap.min.css" rel="stylesheet">
-		<link href="css/style-teste.css" rel="stylesheet">
-		<link href="css/vendors.unminified.css" rel="stylesheet">
-		<link href="css/custom.css" rel="stylesheet">
+		<link href="css/main.css" rel="stylesheet">
+		<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	</head>
 	<body>
 		<div id="page">
@@ -66,11 +64,11 @@
 										<div class="custom-search-input-2">
 											<div class="form-group">
 												<input class="form-control" type="text" placeholder="Ex. Administrativo">
-												<i class="icon_search"></i>
+												<i class="fa fa-search"></i>
 											</div>
 											<div class="form-group">
 												<input class="form-control" type="text" placeholder="Cidade">
-												<i class="icon_pin_alt"></i>
+												<i class="fa fa-map-marker"></i>
 											</div>
 											<input type="submit" value="Buscar">
 										</div>
@@ -147,9 +145,9 @@
 							<div class="collapse show" id="collapse_ft_4">
 								<div class="follow_us">
 									<ul>
-										<li><a href="#0"><i class="ti-facebook"></i></a></li>
-										<li><a href="#0"><i class="ti-linkedin"></i></a></li>
-										<li><a href="#0"><i class="ti-instagram"></i></a></li>
+										<li><a href="#0"><i class="fa fa-facebook"></i></a></li>
+										<li><a href="#0"><i class="fa fa-linkedin"></i></a></li>
+										<li><a href="#0"><i class="fa fa-instagram"></i></a></li>
 									</ul>
 								</div>
 							</div>
