--- a/projeto/detail-job.html
+++ b/projeto/detail-job.html
@@ -16,16 +16,7 @@
     <link rel="apple-touch-icon" type="image/x-icon" sizes="114x114" href="img/apple-touch-icon-114x114-precomposed.png">
     <link rel="apple-touch-icon" type="image/x-icon" sizes="144x144" href="img/apple-touch-icon-144x144-precomposed.png">
 
-    <!-- GOOGLE WEB FONT -->
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
-
-    <!-- BASE CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-	<link href="css/vendors.css" rel="stylesheet">
-
-    <!-- YOUR CUSTOM CSS -->
-    <link href="css/custom.css" rel="stylesheet">
+    <link href="css/style-list.css" rel="stylesheet">
 
 </head>
 
@@ -39,15 +30,13 @@
 				<div class="col-lg-3 col-12">
 					<div id="logo">
 						<a href="index.html">
-							<img src="img/logo_sticky.svg" width="165" height="35" alt="" class="logo_sticky">
+							<img src="img/logo-white.png" width="145" height="54" alt="" class="logo_sticky">
 						</a>
 					</div>
 				</div>
-				<div class="col-lg-9 col-12">
+				<div class="col-lg-9 col-12" style="margin: auto;">
 					<ul id="top_menu">
-						<li><a href="account.html" class="btn_add">Add Listing</a></li>
-						<li><a href="#sign-in-dialog" id="sign-in" class="login" title="Sign In">Sign In</a></li>
-						<li><a href="wishlist.html" class="wishlist_bt_top" title="Your wishlist">Your wishlist</a></li>
+						<li><a href="account.html" class="btn_add">Empresas</a></li>
 					</ul>
 					<!-- /top_menu -->
 					<a href="#menu" class="btn_mobile">
@@ -58,108 +47,90 @@
 						</div>
 					</a>
 					<nav id="menu" class="main-menu">
-                        <ul>
-                            <li><span><a href="#0">Home</a></span>
-                                <ul>
-                                    <li><a href="index.html">Home version 1</a></li>
-                                    <li><a href="index-2.html">Home version 2</a></li>
-                                    <li><a href="index-3.html">Home version 3</a></li>
-                                    <li><a href="index-4.html">Home version 4</a></li>
-                                    <li><a href="index-5.html">Home version 5</a></li>
-                                    <li><a href="index-6.html">Home version 6 (GDPR)</a></li>
-                                </ul>
-                            </li>
-                            <li><span><a href="#0">Listings</a></span>
-                                <ul>
-                                    <li>
-                                        <span><a href="#0">Grid Layout</a></span>
-                                        <ul>
-                                            <li><a href="grid-listings-filterscol-search-aside.html">Sidebar+Search mobile 1</a></li>
-                                            <li><a href="grid-listings-filterstop-search-aside.html">Full+Search mobile 1</a></li>
-                                            <li><a href="grid-listings-filterscol.html">Sidebar+Search mobile 2</a></li>
-                                            <li><a href="grid-listings-filterstop.html">Full+Search mobile 2</a></li>
-                                            <li><a href="grid-listings-isotope.html">Full+Isotope filter</a></li>
-                                        </ul>
-                                    </li>
-                                    <li>
-                                        <span><a href="#0">Row Layout</a></span>
-                                        <ul>
-                                            <li><a href="row-listings-filterscol-search-aside.html">Sidebar+Search mobile 1</a></li>
-                                            <li><a href="row-listings-filterstop-search-aside.html">Full+Search mobile 1</a></li>
-                                            <li><a href="row-listings-filterscol.html">Sidebar+Search mobile 2</a></li>
-                                            <li><a href="row-listings-filterstop.html">Full+Search mobile 2</a></li>
-                                            <li><a href="row-listings-isotope.html">Full+Isotope filter</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="listing-map.html">Listing Map</a></li>
-                                    <li>
-                                        <span><a href="#0">Detail pages</a></span>
-                                        <ul>
-                                            <li><a href="detail-hotel.html">Detail page 1</a></li>
-                                            <li><a href="detail-restaurant.html">Detail page 2</a></li>
-                                            <li><a href="detail-shop.html">Detail page 3</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="bookings.html">Bookings - Purchases</a></li>
-                                    <li><a href="checkout.html">Checkout</a></li>
-                                    <li><a href="confirm.html">Confirm</a></li>
-                                </ul>
-                            </li>
-                            <li><span><a href="#0">Pages</a></span>
-                                <ul>
-                                    <li><a href="admin_section/index.html">Admin section</a></li>
-                                    <li><a href="blog.html">Blog</a></li>
-                                    <li><a href="account.html">Account</a></li>
-                                    <li><a href="help.html">Help Section</a></li>
-                                    <li><a href="faq.html">Faq Section</a></li>
-                                    <li><a href="wishlist.html">Wishlist page</a></li>
-                                    <li><a href="contacts.html">Contacts</a></li>
-                                    <li>
-                                        <span><a href="#0">Icon Packs</a></span>
-                                        <ul>
-                                            <li><a href="icon-pack-1.html">Icon pack 1</a></li>
-                                            <li><a href="icon-pack-2.html">Icon pack 2</a></li>
-                                            <li><a href="icon-pack-3.html">Icon pack 3</a></li>
-                                            <li><a href="icon-pack-4.html">Icon pack 4</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="about.html">About</a></li>
-                                    <li><a href="media-gallery.html">Media gallery</a></li>
-                                </ul>
-                            </li>
-                            <li><span><a href="#0">Extra</a></span>
-                                <ul>
-                                    <li><a href="404.html">404 page</a></li>
-                                    <li><a href="contacts-2.html">Contacts 2</a></li>
-                                    <li><a href="pricing-tables.html">Pricing tables</a></li>
-                                    <li><a href="login.html">Login</a></li>
-                                    <li><a href="register.html">Register</a></li>
-                                    <li><a href="menu-options.html">Menu Options</a></li>
-                                    <li><a href="invoice.html">Invoice</a></li>
-                                    <li><a href="coming_soon/index.html">Coming Soon</a></li>
-                                </ul>
-                            </li>
-                            <li><span><a href="#0">Buy template</a></span></li>
-                        </ul>
-                    </nav>
+			      <ul>
+							<li><span><a href="#0">Início</a></span></li>
+							<li><span><a href="#0">Vagas</a></span>
+							<li><span><a href="#0">Contato</a></span></li>
+							<!--<li><span><a href="#0">Buy template</a></span></li>-->
+						</ul>
+					</nav>
 				</div>
 			</div>
 			<!-- /row -->
 		</div>
-		<!-- /container -->		
+		<!-- /container -->
+		<!-- search_mobile -->
+		<div class="layer"></div>
+		<div id="search_mobile">
+			<a href="#" id="close-search-mobile" class="side_panel"><i class="fa fa-close"></i></a>
+			<div class="custom-search-input-2">
+				<div class="form-group">
+					<input class="form-control" type="text" placeholder="Ex. Administrativo">
+					<i class="fa fa-search"></i>
+				</div>
+				<div class="form-group">
+					<input class="form-control" type="text" placeholder="Cidade">
+					<i class="fa fa-map-marker"></i>
+				</div><!--
+				<select class="wide">
+					<option>All Categories</option>	
+					<option>Shops</option>
+					<option>Hotels</option>
+					<option>Restaurants</option>
+					<option>Bars</option>
+					<option>Events</option>
+					<option>Fitness</option>
+				</select>-->
+				<input type="submit" value="Buscar">
+			</div>
+		</div>
+		<!-- /search_mobile -->
 	</header>
 	<!-- /header -->
 	
 	<main>
-		
-		<nav class="secondary_nav sticky_horizontal_2">
-			<div class="container">
-				<ul class="clearfix">
-					<li><a href="#description" class="active">Senior front-end developer</a></li>
-				</ul>
-			</div>
-		</nav>
-
+		<div id="results">
+		   <div class="container">
+			   <div class="row">
+				   <div class="col-lg-3 col-md-4 col-10 search-container">
+				   		<h4>Nutricionista clinica e hospitalar</h4>
+						<h5>145 resultados para sua pesquisa.</h5>
+				   </div>
+				   <div class="col-lg-9 col-md-8 col-2 btn_search_mobile_auto">
+					   <a href="#0" class="side_panel btn_search_mobile"></a>
+						<div class="row no-gutters custom-search-input-2 inner">
+							<div class="col-lg-6">
+								<div class="form-group">
+									<input class="form-control" type="text" placeholder="What are you looking for...">
+									<i class="icon_search"></i>
+								</div>
+							</div>
+							<div class="col-lg-5">
+								<div class="form-group">
+									<input class="form-control" type="text" placeholder="Where">
+									<i class="icon_pin_alt"></i>
+								</div>
+							</div>
+							<!--
+							<div class="col-lg-3">
+								<select class="wide">
+									<option>All Categories</option>	
+									<option>Shops</option>
+									<option>Hotels</option>
+									<option>Restaurants</option>
+									<option>Bars</option>
+									<option>Events</option>
+									<option>Fitness</option>
+								</select>
+							</div>-->
+							<div class="col-lg-1">
+								<input type="submit" value="Buscar">
+							</div>
+						</div>
+				   </div>
+			   </div>
+		   </div>
+	   </div>
 		<div class="container margin_60_35">
 				<div class="row">
 					<div class="col-lg-8">
@@ -195,7 +166,7 @@
 						<!-- /section -->
 					</div>
 					<!-- /col -->
-					
+					<!--
 					<aside class="col-lg-4" id="sidebar">
 						<div class="box_detail booking">
 							<div class="price">
@@ -240,7 +211,7 @@
 							<li><a class="fb-share" href="#0"><i class="social_facebook"></i> Share</a></li>
 							<li><a class="twitter-share" href="#0"><i class="social_whatsapp"></i> Tweet</a></li>
 						</ul>
-					</aside>
+					</aside>-->
 				</div>
 				<!-- /row -->
 		</div>
@@ -249,12 +220,12 @@
 	</main>
 	<!--/main-->
 	
-	<footer>
+	<footer class="plus_border">
 		<div class="container margin_60_35">
 			<div class="row">
 				<div class="col-lg-3 col-md-6 col-sm-6">
 					<a data-toggle="collapse" data-target="#collapse_ft_1" aria-expanded="false" aria-controls="collapse_ft_1" class="collapse_bt_mobile">
-						<h3>Quick Links</h3>
+						<h3>Candidatos</h3>
 						<div class="circle-plus closed">
 							<div class="horizontal"></div>
 							<div class="vertical"></div>
@@ -262,18 +233,15 @@
 					</a>
 					<div class="collapse show" id="collapse_ft_1">
 						<ul class="links">
-							<li><a href="#0">About us</a></li>
-							<li><a href="#0">Faq</a></li>
-							<li><a href="#0">Help</a></li>
-							<li><a href="#0">My account</a></li>
-							<li><a href="#0">Create account</a></li>
-							<li><a href="#0">Contacts</a></li>
+							<li><a href="#0">Início</a></li>
+							<li><a href="#0">Vagas</a></li>
+							<li><a href="#0">Dúvidas</a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6 col-sm-6">
 					<a data-toggle="collapse" data-target="#collapse_ft_2" aria-expanded="false" aria-controls="collapse_ft_2" class="collapse_bt_mobile">
-						<h3>Categories</h3>
+						<h3>Empresas</h3>
 						<div class="circle-plus closed">
 							<div class="horizontal"></div>
 							<div class="vertical"></div>
@@ -281,28 +249,25 @@
 					</a>
 					<div class="collapse show" id="collapse_ft_2">
 						<ul class="links">
-							<li><a href="#0">Shops</a></li>
-							<li><a href="#0">Hotels</a></li>
-							<li><a href="#0">Restaurants</a></li>
-							<li><a href="#0">Bars</a></li>
-							<li><a href="#0">Events</a></li>
-							<li><a href="#0">Fitness</a></li>
+							<li><a href="#0">Divulgar vaga</a></li>
+							<li><a href="#0">Cadastrar-se</a></li>
+							<li><a href="#0">Dúvidas</a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6 col-sm-6">
 					<a data-toggle="collapse" data-target="#collapse_ft_3" aria-expanded="false" aria-controls="collapse_ft_3" class="collapse_bt_mobile">
-						<h3>Contacts</h3>
+						<h3>Ajude uma causa</h3>
 						<div class="circle-plus closed">
 							<div class="horizontal"></div>
 							<div class="vertical"></div>
 						</div>
 					</a>
 					<div class="collapse show" id="collapse_ft_3">
-						<ul class="contacts">
-							<li><i class="ti-home"></i>97845 Baker st. 567<br>Los Angeles - US</li>
-							<li><i class="ti-headphone-alt"></i>+39 06 97240120</li>
-							<li><i class="ti-email"></i><a href="#0">info@sparker.com</a></li>
+						<ul class="links">
+							<li><a href="#0">Adote um animal</a></li>
+							<li><a href="#0">Doe sangue</a></li>
+							<li><a href="#0">Faça uma doação</a></li>
 						</ul>
 					</div>
 				</div>
@@ -312,25 +277,13 @@
 							<div class="horizontal"></div>
 							<div class="vertical"></div>
 						</div>
-						<h3>Keep in touch</h3>
+						<h3>Siga nos</h3>
 					</a>
 					<div class="collapse show" id="collapse_ft_4">
-						<div id="newsletter">
-							<div id="message-newsletter"></div>
-							<form method="post" action="assets/newsletter.php" name="newsletter_form" id="newsletter_form">
-								<div class="form-group">
-									<input type="email" name="email_newsletter" id="email_newsletter" class="form-control" placeholder="Your email">
-									<input type="submit" value="Submit" id="submit-newsletter">
-								</div>
-							</form>
-						</div>
 						<div class="follow_us">
-							<h5>Follow Us</h5>
 							<ul>
 								<li><a href="#0"><i class="ti-facebook"></i></a></li>
-								<li><a href="#0"><i class="ti-twitter-alt"></i></a></li>
-								<li><a href="#0"><i class="ti-google"></i></a></li>
-								<li><a href="#0"><i class="ti-pinterest"></i></a></li>
+								<li><a href="#0"><i class="ti-linkedin"></i></a></li>
 								<li><a href="#0"><i class="ti-instagram"></i></a></li>
 							</ul>
 						</div>
@@ -340,34 +293,11 @@
 			<!-- /row-->
 			<hr>
 			<div class="row">
-				<div class="col-lg-6">
-					<ul id="footer-selector">
-						<li>
-							<div class="styled-select" id="lang-selector">
-								<select>
-									<option value="English" selected>English</option>
-									<option value="French">French</option>
-									<option value="Spanish">Spanish</option>
-									<option value="Russian">Russian</option>
-								</select>
-							</div>
-						</li>
-						<li>
-							<div class="styled-select" id="currency-selector">
-								<select>
-									<option value="US Dollars" selected>US Dollars</option>
-									<option value="Euro">Euro</option>
-								</select>
-							</div>
-						</li>
-						<li><img src="img/cards_all.svg" alt=""></li>
-					</ul>
-				</div>
-				<div class="col-lg-6">
+				<div class="col-lg-12">
 					<ul id="additional_links">
-						<li><a href="#0">Terms and conditions</a></li>
-						<li><a href="#0">Privacy</a></li>
-						<li><span>© 2018 Sparker</span></li>
+						<li><a href="#0">Termos e condições</a></li>
+						<li><a href="#0">Privacidade</a></li>
+						<li><span>© 2019 CampEmpregos</span></li>
 					</ul>
 				</div>
 			</div>
@@ -377,88 +307,11 @@
 	</div>
 	<!-- page -->
 	
-	<!-- Sign In Popup -->
-	<div id="sign-in-dialog" class="zoom-anim-dialog mfp-hide">
-		<div class="small-dialog-header">
-			<h3>Sign In</h3>
-		</div>
-		<form>
-			<div class="sign-in-wrapper">
-				<a href="#0" class="social_bt facebook">Login with Facebook</a>
-				<a href="#0" class="social_bt google">Login with Google</a>
-				<div class="divider"><span>Or</span></div>
-				<div class="form-group">
-					<label>Email</label>
-					<input type="email" class="form-control" name="email" id="email">
-					<i class="icon_mail_alt"></i>
-				</div>
-				<div class="form-group">
-					<label>Password</label>
-					<input type="password" class="form-control" name="password" id="password" value="">
-					<i class="icon_lock_alt"></i>
-				</div>
-				<div class="clearfix add_bottom_15">
-					<div class="checkboxes float-left">
-						<label class="container_check">Remember me
-						  <input type="checkbox">
-						  <span class="checkmark"></span>
-						</label>
-					</div>
-					<div class="float-right mt-1"><a id="forgot" href="javascript:void(0);">Forgot Password?</a></div>
-				</div>
-				<div class="text-center"><input type="submit" value="Log In" class="btn_1 full-width"></div>
-				<div class="text-center">
-					Don’t have an account? <a href="register.html">Sign up</a>
-				</div>
-				<div id="forgot_pw">
-					<div class="form-group">
-						<label>Please confirm login email below</label>
-						<input type="email" class="form-control" name="email_forgot" id="email_forgot">
-						<i class="icon_mail_alt"></i>
-					</div>
-					<p>You will receive an email containing a link allowing you to reset your password to a new preferred one.</p>
-					<div class="text-center"><input type="submit" value="Reset Password" class="btn_1"></div>
-				</div>
-			</div>
-		</form>
-		<!--form -->
-	</div>
-	<!-- /Sign In Popup -->
-	
 	<div id="toTop"></div><!-- Back to top button -->
 	
 	<!-- COMMON SCRIPTS -->
     <script src="js/common_scripts.js"></script>
 	<script src="js/functions.js"></script>
-	<script src="assets/validate.js"></script>
-	
-	<!-- Map -->
-	<script src="http://maps.googleapis.com/maps/api/js"></script>
-	<script src="js/map_single_hotel.js"></script>
-	<script src="js/infobox.js"></script>
-	
-	<!-- INPUT QUANTITY  -->
-	<script src="js/input_qty.js"></script>
-	
-	<!-- DATEPICKER  -->
-	<script>
-	$(function() {
-	  $('input[name="dates"]').daterangepicker({
-		  autoUpdateInput: false,
-		  parentEl:'#input-dates',
-		  opens: 'left',
-		  locale: {
-			  cancelLabel: 'Clear'
-		  }
-	  });
-	  $('input[name="dates"]').on('apply.daterangepicker', function(ev, picker) {
-		  $(this).val(picker.startDate.format('MM-DD-YY') + ' > ' + picker.endDate.format('MM-DD-YY'));
-	  });
-	  $('input[name="dates"]').on('cancel.daterangepicker', function(ev, picker) {
-		  $(this).val('');
-	  });
-	});
-	</script>
   
 </body>
 </html>
